fix : Top Studies chart is cropped after resize

--- a/src/components/UserDashboard/UserDashboard.module.css
+++ b/src/components/UserDashboard/UserDashboard.module.css
@@ -39,13 +39,6 @@
   height: 404px;
 }
 
-.dashboardCardErrorContainer {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .cardActionButton {
   height: 37px;
   padding-right: 21px;
